src/plugins/sqldrivers/ibase/qsql_ibase.cpp
@@ -323,7 +323,8 @@ public:
             return false;
 
         q->setLastError(QSqlError(QCoreApplication::translate("QIBaseDriver", msg),
-                        imsg, typ, int(sqlcode)));
+                                  imsg, typ,
+                                  sqlcode != -1 ? QString::number(sqlcode) : QString()));
         return true;
     }
 
